tests/ui/codegen/mir/validation/validate_memory_boundary.mir
//@compile-flags: --pass dce
//~? ERROR: [fn0] [bb0, inst0] slice instruction `make_memory_slice` survives the `evm-shaped` phase boundary
//~? ERROR: [fn0] [bb0, inst1] slice instruction `slice_len` survives the `evm-shaped` phase boundary
//~? ERROR: [fn1] [bb0, inst0] ABI encoding instruction `abi_encode` survives the `evm-shaped` phase boundary
//~? ERROR: [fn2] memory-object signature type `memorystruct` survives the `evm-shaped` phase boundary
//~? ERROR: [fn2] [bb0, inst0] aggregate instruction `storage_to_memory` survives the `evm-shaped` phase boundary
// EVM-shaped MIR is the word-backend boundary. Semantic memory operations
// must be rejected here if their named lowering pass did not consume them.
@module ValidateMemoryBoundary
@phase evm-shaped
fn @slice(arg0: memptr, arg1: u256) -> u256 {
  bb0:
    v2 = make_memory_slice arg0, arg1
    v3 = slice_len v2
    ret v3
}
fn @abi(arg0: u256) -> memoryslice {
  bb0:
    v1 = abi_encode [word], args arg0
    ret v1
}
fn @aggregate(arg0: u256, arg1: memorystruct) {
  bb0:
    storage_to_memory struct<word>, arg0, arg1
    stop
}
